Improve null check for ArtifactoryPermissionsUpdater